History of this buildout
========================

5.0.31 (unreleased)
-------------------

- Nothing changed yet.


5.0.30 (2014-10-09)
-------------------

- Fix ``UnboundLocalError: local variable 'themes' referenced before
  assignment``.  This is when exporting the subscribers of the MREvent
  contenttype, via the 'export to excel' tab.
  [maurits]


5.0.29 (2014-10-07)
-------------------

- Make sure the PFG quickedit form appears next to the toolbox,
  instead of being pushed below it.
  [maurits]


5.0.28 (2014-10-06)
-------------------

- Use correct jqueryui version for Plone 4.2.  Do not use newer
  plone.app.jquery version.
  [maurits]


5.0.27 (2014-09-17)
-------------------

- Added Products.PloneFormGen.
  [jladage]


5.0.26 (2014-07-31)
-------------------

- Use Products.PortalTransforms 2.1.4-zest20140731.  This uses
  subprocess.Popen instead of os.popen4 and should be better for
  memory.
  [maurits]


5.0.25 (2014-07-28)
-------------------

- sendmail script: send to webadmin@zestsoftware.nl too.
  [maurits]


5.0.24 (2014-07-17)
-------------------

- Change times for crontab-pack to a bit earlier on Saturday. 
  [maurits]

- Fix crontab-pack.  It needs an absolute path to the zodbpack.cfg
  file, otherwise it only works when the working directory is the
  buildout directory.
  [maurits]


5.0.23 (2014-07-08)
-------------------

- Fix possible ``AttributeError: 'NoneType' object has no attribute
  'year'`` for advisories that have no date.
  [maurits]

- Memmon: 1500 MB.  'Popen' uses fork/clone under the hood, which
  means you suddenly need twice as much memory when using
  portaltransforms.  See http://stackoverflow.com/questions/1367373
  [maurits]


5.0.22 (2014-04-25)
-------------------

- Add cronjob to restart the zope instance every Sunday evening.
  [maurits]


5.0.21 (2014-03-21)
-------------------

- Increase production memmon limit for the instance to 2300.  This is
  after a memory increase from 3 to 4 GB.
  [maurits]

