@@ -217,4 +217,18 @@
         handler="minaraad.projects.migration.update_types" />
   </genericsetup:upgradeSteps>
 
+  <genericsetup:upgradeSteps
+      source="1025"
+      destination="1026"
+      profile="minaraad.projects:default">
+    <genericsetup:upgradeStep
+        title="Run catalog step"
+        description="Adds getResponsible_group metadata"
+        handler="minaraad.projects.migration.run_catalog_step" />
+    <genericsetup:upgradeStep
+        title="Update meeting and project catalog metadata"
+        description="Adds getResponsible_group metadata to brains"
+        handler="minaraad.projects.migration.update_meeting_project_metadata" />
+  </genericsetup:upgradeSteps>
+
 </configure>
