@@ -6,4 +6,5 @@
   <column value="getDuration" />
   <column value="getStart_time" />
   <column value="get_end_time" />
+  <column value="getResponsible_group" />
 </object>
